1998-10-26  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/pop3-fma.el: Require `mel-b-el' if `mel-b' does not exist.

1998-10-26  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/pop3-fma.el: Require `mel-b-ccl' or `mel-b-el' if `mel-b'
	does not exist.

	* lisp/nnheader.el (nnheader-file-coding-system): Restore the
	previous default value.

1998-10-26  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus.el (gnus-version-number): Update to 6.10.027.

	* Sync up with Pterodactyl Gnus 0.40.

1998-10-23  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus.el (gnus-version-number): Update to 6.10.026.
	(gnus-version): Modify supported version for FLIM and SEMI.

1998-10-22  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus-cache.el (gnus-cache-possibly-enter-article): Use
	`mime-fetch-field' for getting Subject and From field.

1998-10-20  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* lisp/nnheader.el (nnheader-insert-nov): Use `mime-fetch-field'
	for Subject and From field.

1998-10-20  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/nnheader.el (nnheader-parse-nov): Use
	`make-full-mail-header'.

1998-10-20  MORIOKA Tomohiko  <morioka@jaist.ac.jp>

	* lisp/nnheader.el (nnheader-parse-head): Use
	`make-full-mail-header'.

1998-10-20  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/nnheader.el (make-full-mail-header): Sync up with
	"chao-6_9" branch.
	(mail-header-set-xref): Use `mime-entity-set-xref-internal'.
	(mail-header-xref): Use `mime-entity-xref-internal'
	(mail-header-set-lines): mime-entity-set-lines-internal'.
	(mail-header-lines): Use `mime-entity-lines-internal'
	(mail-header-set-chars): Use `mime-entity-set-chars-internal'.
	(mail-header-chars): Use `mime-entity-chars-internal'.
	(mail-header-set-references): Use
	`mime-entity-set-references-internal'.
	(mail-header-references): Use `mime-entity-references-internal'.
	(mail-header-set-message-id): Use
	`mime-entity-set-message-id-internal'.
	(mail-header-message-id): Use `mime-entity-message-id-internal'.