@@ -1,3 +1,7 @@
+1998-10-28  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>
+
+	* lisp/pop3-fma.el: Determin base64 encode/decode function by FLIM.
+
 1998-10-26  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>
 
 	* lisp/pop3-fma.el: Require `mel-b-el' if `mel-b' does not exist.
